--- a/docker/front/Dockerfile.node
+++ b/docker/front/Dockerfile.node
@@ -1,7 +1,6 @@
 FROM node:15-alpine
 
-WORKDIR /usr/src
-COPY package*.json ./
-RUN npm install
-COPY . .
+WORKDIR /usr/src/app
+RUN npm install -g @angular/cli &&\
+    npm install
 EXPOSE 5000
