Linking front and back done

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,9 @@
+# GLOBAL
+DB_USER= ~
+DB_PASSWORD= ~
+
+# AUTHENTICATION
+AUTHENTICATION_DB_NAME= ~
+
 # INVENTORY
 INVENTORY_DB_NAME= ~
-INVENTORY_DB_USER= ~
-INVENTORY_DB_PASSWORD= ~
