--- a/docker/front/Dockerfile.node
+++ b/docker/front/Dockerfile.node
@@ -1,6 +1,9 @@
 FROM node:15-alpine
 
-WORKDIR /usr/src/app
-RUN npm install -g @angular/cli &&\
+ENV NODE_PATH=/install/node_modules
+ENV PATH=${NODE_PATH}/.bin:${PATH}
+COPY package*.json /install/
+RUN cd /install &&\
     npm install
+
 EXPOSE 5000
