--- a/docker/front/package.json
+++ b/docker/front/package.json
@@ -19,17 +19,19 @@
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "@clr/angular": "4.0.8",
     "@clr/icons": "4.0.8",
     "@clr/ui": "4.0.8",
     "@webcomponents/webcomponentsjs": "^2.0.0",
+    "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.1",
-    "@angular/cli": "^11.0.5",
+    "@angular/cli": "~11.0.1",
     "@angular/compiler-cli": "~11.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
