--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,12 +20,15 @@ services:
       sh -c "ln -sf /install/node_modules node_modules &&
       ln -sf /install/package.json package.json &&
       ln -sf /install/package-lock.json package-lock.json &&
+      npm run build:tailwind &&
       ng serve --host 0.0.0.0 --port 5000 --disableHostCheck"
     volumes:
       - ./volumes/front:/usr/src/app
     working_dir: /usr/src/app
     networks:
       - web
+    ports:
+      - 5000:5000
 
   web_proxy:
     build:
