--- a/docker/front/package.json
+++ b/docker/front/package.json
@@ -12,32 +12,31 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "build:tailwind": "tailwind build src/assets/styles/index.css -o src/assets/styles/tailwind.css",
-    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm start"
+    "install:clean": "rm -rf /install/node_modules/ && rm -rf package-lock.json && npm install"
   },
   "dependencies": {
-    "@angular/animations": "10.1.2",
-    "@angular/common": "10.1.2",
-    "@angular/compiler": "10.1.2",
-    "@angular/core": "10.1.2",
-    "@angular/forms": "10.1.2",
-    "@angular/platform-browser": "10.1.2",
-    "@angular/platform-browser-dynamic": "10.1.2",
-    "@angular/router": "10.1.2",
+    "@angular/animations": "10.2.4",
+    "@angular/common": "10.2.4",
+    "@angular/compiler": "10.2.4",
+    "@angular/core": "10.2.4",
+    "@angular/forms": "10.2.4",
+    "@angular/platform-browser": "10.2.4",
+    "@angular/platform-browser-dynamic": "10.2.4",
+    "@angular/router": "10.2.4",
     "@fortawesome/fontawesome-free": "5.14.0",
     "@popperjs/core": "2.5.1",
     "@tailwindcss/custom-forms": "0.2.1",
     "chart.js": "2.9.3",
-    "popper.js": "^1.16.1",
     "rxjs": "6.6.3",
     "tailwindcss": "1.8.10",
     "tslib": "2.0.1",
     "zone.js": "0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1001.2",
-    "@angular/cli": "10.1.2",
-    "@angular/compiler-cli": "10.1.2",
-    "@angular/language-service": "10.1.2",
+    "@angular-devkit/build-angular": "~0.1001.2",
+    "@angular/cli": "10.2.1",
+    "@angular/compiler-cli": "10.2.4",
+    "@angular/language-service": "10.2.4",
     "@types/jasmine": "3.5.14",
     "@types/jasminewd2": "2.0.8",
     "@types/node": "14.11.2",
