--- a/docker/front/default.conf
+++ b/docker/front/default.conf
@@ -8,6 +8,15 @@ server {
         proxy_pass http://authentication_back:8000/;
     }
 
+    location /api/cart/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_pass http://cart_back:8000/api/;
+    }
+
     location /api/inventory/ {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -24,6 +33,15 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
 
         proxy_pass http://order_back:8000/api/;
+    }
+
+    location /api/search/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_pass http://search_back:8000/api/;
     }
 
     location / {
