--- a/.env/inventory.env
+++ b/.env/inventory.env
@@ -2,4 +2,4 @@
 MYSQL_HOST= inventory_db
 MYSQL_PORT= 3306
 MYSQL_DATABASE= inventory_db
-AUTH_MICROSERVICE_ADDRESS=https://authentication.localhost
+AUTH_MICROSERVICE_ADDRESS=http://authentication_back:8000
