--- a/web.yml
+++ b/web.yml
@@ -13,6 +13,8 @@ services:
       ln -sf /install/package-lock.json package-lock.json &&
       npm run build:tailwind &&
       ng serve --host 0.0.0.0 --port 5000 --disableHostCheck"
+    env_file:
+      - '.env/front_api.env'
     volumes:
       - ./volumes/front:/usr/src/app
     working_dir: /usr/src/app
@@ -39,6 +41,7 @@ services:
     environment:
       PYTHONUNBUFFERED: 0
     env_file:
+      - '.env/back_api.env'
       - '.env/db.env'
     volumes:
       - /etc/localtime:/etc/localtime:ro
