--- a/.env/authentication.env
+++ b/.env/authentication.env
@@ -2,4 +2,4 @@
 MYSQL_HOST= authentication_db
 MYSQL_PORT= 3306
 MYSQL_DATABASE= authentication_db
-AUTHSECRET=secretkey
+JWT_SECRET_KEY=Dude!WhyShouldYouEncryptIt
