--- a/docker/front/package.json
+++ b/docker/front/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "10.2.4",
     "@angular/platform-browser-dynamic": "10.2.4",
     "@angular/router": "10.2.4",
+    "@auth0/angular-jwt": "5.0.2",
     "@fortawesome/fontawesome-free": "5.14.0",
     "@popperjs/core": "2.5.1",
     "@tailwindcss/custom-forms": "0.2.1",
